# asr-chat

./: .gitignore  ClAUDE.md  PROJECT.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: asr_handler.py  config.py  db.py  main.py  schemas.py
ios/ASRAgent/ASRAgent/: ASRAgentApp.swift  ContentView.swift  Info.plist
ios/ASRAgent/ASRAgent.xcodeproj/: project.pbxproj
ios/ASRAgent/ASRAgent/Models/: ASRMessage.swift  ChatEvent.swift
ios/ASRAgent/ASRAgent/Services/: ASRViewModel.swift  AudioRecorder.swift  ChatService.swift  WebSocketManager.swift
